fix nav flex wrap

--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@ body {
     text-align: center;
 }
 
+.flex-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.flex-container > div {
+    height: 50px;
+    text-align: center;
+}
+
 header{
     color: rgb(255, 255, 255);
     font-weight: bold;
@@ -18,8 +31,8 @@ header{
 }
 
 nav a {
-    text-decoration: none;
     color: white;
+    text-decoration: none;
     border: 2px solid white;
     border-radius: 20px;
     margin: 8px;
